[package]
name = "rust-bme680-prometheus"
version = "0.1.0"
authors = ["swapsCAPS <verstegen.daan@gmail.com>"]
edition = "2018"

[dependencies]
prometheus = "0.7"
bme680 = "0.5.0"
embedded-hal = "0.2.3"
linux-embedded-hal = "0.3.0"
env_logger = "0.7"
log = "0.4"
hyper = "0.13"
tokio = { version = "0.2", features = ["full"] }
lazy_static = "1.4.0"
